--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,13 +6,12 @@
                     <img src="assets/img/logo.png" class="logoDardanSahitaj" alt="" routerLink="/">
                     <ul class="list-group list-group-horizontal ">
 
-
                         <!-- ######################## PROGRAMMATION MENU START ######################## -->
                         <li class="buttonHeader" alt="Programmation">
                             <a routerLink="/programmation" [matMenuTriggerFor]="menuDev"
                                 (click)="openMatMenuProgrammatically()">
                                 <img src="../../assets/img/icon/menu/binary-code.png" alt="" srcset="">
-                                Programmation
+                                <p>Programmation</p>
                                 <span></span><span></span><span></span><span></span>
 
                                 <!--First level Menu-->
@@ -49,7 +48,7 @@
                         <li class="buttonHeader" alt="Graphisme">
                             <a routerLink="/graphisme" [matMenuTriggerFor]="menuGraphisme">
                                 <img src="../../assets/img/icon/menu/graphic-tablet.png" alt="" srcset="">
-                                Graphisme
+                                <p>Graphisme</p>
                                 <span></span><span></span><span></span><span></span>
 
                                 <!--First level Menu-->
@@ -65,8 +64,7 @@
                         <li class="buttonHeader" alt="Formation">
                             <a routerLink="/formation" [matMenuTriggerFor]="menuFormation">
                                 <img src="../../assets/img/icon/menu/male.png" alt="" srcset="">
-
-                                Formation
+                                <p>Formation</p>
                                 <span></span><span></span><span></span><span></span>
 
                                 <!--First level Menu-->
@@ -114,7 +112,7 @@
                         <li class="buttonHeader" alt="Marketing">
                             <a routerLink="/marketing" [matMenuTriggerFor]="menuMarketing">
                                 <img src="../../assets/img/icon/menu/bullhorn.png" alt="" srcset="">
-                                Marketing
+                                <p>Marketing</p>
                                 <span></span><span></span><span></span><span></span>
 
                                 <!--First level Menu-->
@@ -131,7 +129,7 @@
                         <li class="buttonHeader" alt="A propos de moi">
                             <a routerLink="/a-propos-de-moi" [matMenuTriggerFor]="menuAboutMe">
                                 <img src="../../assets/img/icon/menu/information.png" alt="" srcset="">
-                                A propos de moi
+                                <p>A propos de moi</p>
                                 <span></span><span></span><span></span><span></span>
 
                                 <!--First level Menu-->
@@ -149,7 +147,6 @@
                         <li class="buttonHeader" alt="Me contacter">
                             <a routerLink="/contact" [matMenuTriggerFor]="menuFormation">
                                 <img src="../../assets/img/icon/menu/contact.png" alt="">
-                                Contact
                                 <span></span><span></span><span></span><span></span>
                             </a>
                         </li>
