--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <div id="body">
-                <app-carrousel *ngIf="routes.url === '/'"></app-carrousel>
+            <app-carrousel *ngIf="routes.url === '/'"></app-carrousel>
+            <div id="body" *ngIf="routes.url != '/'">
                 <router-outlet *ngIf="routes.url !== '/'"></router-outlet>
             </div><!-- fin BODYID -->
         </div>
