--- a/src/app/carrousel/carrousel.component.css
+++ b/src/app/carrousel/carrousel.component.css
@@ -1,6 +1,7 @@
 .carousel {
     width: 100%;
     overflow: hidden;
+    margin-top: 10px;
 }
 
 .carousel-inner {
@@ -11,6 +12,7 @@
 
 .carousel-item>img {
     width: 100%;
+    height: 500px;
 }
 
 .carousel.rtl {
