--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,3 +14,11 @@ footer {
     background-color: #2c3060;
     box-shadow: 1px 4px 6px #00a3cf;
 }
+
+@media screen and (max-width: 500px) {
+    footer {
+        width: 100%;
+        font-size: 10px !important;
+
+    }
+}
