--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,19 +9,16 @@ header {
     justify-content: center;
     align-items: center;
     align-self: auto;
-    position: sticky;
-    margin-bottom: 11px;
+    margin-bottom: 40px;
     margin-top: 1.2rem;
-    position: fixed;
 }
-
-
 
 .logoDardanSahitaj {
     position: absolute;
     width: 50px;
-    margin-top: 0rem;
-    left: 10px;
+    margin-top: 5px;
+    margin-right: 250px;
+    left: 130px;
     z-index: 100;
 }
 
