--- a/src/app/carrousel/carrousel.component.html
+++ b/src/app/carrousel/carrousel.component.html
@@ -1,16 +1,13 @@
-<!-- début caroussel -->
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-        <div class="carousel-item" data-bs-interval="3000">
-            <img src="assets/img/image-accueil.jpg" alt="...">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="assets/img/image-accueil.jpg" alt="First slide">
         </div>
-        <div class="carousel-item active" data-bs-interval="3000">
-            <img src="assets/img/image-accueil3.jpg" alt="...">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="assets/img/image-accueil3.jpg" alt="Second slide">
         </div>
-        <div class="carousel-item" data-bs-interval="3000">
-            <img src="assets/img/image-accueil2.jpg" alt="...">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="assets/img/image-accueil2.jpg" alt="Third slide">
         </div>
     </div>
-
-</div><!-- fin caroussel -->
+</div>
